--- a/support.html
+++ b/support.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ConsultingMX | Support</title>
+<title>Model Bolivia SA | Administracion</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -14,17 +14,27 @@
 <body>
 <div class="main">
   <div class="header">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PG7LHT86JR');
+  </script>
     <div class="header_resize">
+      <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
-        <h1><a href="index.html"><span>ConsultingMX</span> <small>Company Slogan Here</small></a></h1>
+        <h1><a href="index.html"><span>Model Bollivia SA</span> <small>Agencia de Modelos</small></a></h1>
       </div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html"><span>Home Page</span></a></li>
-          <li class="active"><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="index.html"><span>Principal</span></a></li>
+          <li class="active"><a href="support.html"><span>Administracion</span></a></li>
+          <li><a href="about.html"><span>Nosotros</span></a></li>
+          <li><a href="blog.html"><span>Modelos</span></a></li>
+          <li><a href="contact.html"><span>Contacto</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -39,19 +49,24 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Support to</span> Company Name</h2>
+          <h2><span>Model Bolivia SA </span> Agencia de Modelaje Profesional</h2>
           <div class="clr"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Suspendisse nulla ligula, blandit ultricies aliquet ac, lobortis in massa. Nunc dolor sem, tincidunt vitae viverra in, egestas sed lacus.</strong> Etiam in ullamcorper felis. Nulla cursus feugiat leo, ut dictum metus semper a. Vivamus euismod, arcu gravida sollicitudin vestibulum, quam sem tempus quam, quis ullamcorper erat nunc in massa. Donec aliquet ante non diam sollicitudin quis auctor velit sodales. Morbi neque est, posuere at fringilla non, mollis nec nibh. Sed commodo tortor nec sem tincidunt mattis. Nam convallis aliquam nibh eu luctus. Nunc vel tincidunt lacus. Suspendisse sit amet pulvinar ante.</p>
-          <p>Phasellus diam justo, laoreet vel vulputate eu, congue vel est. Maecenas eros libero, sollicitudin a vulputate fermentum, ultrices vel lacus. Nam in metus non augue fermentum consequat ultrices ac enim. Integer aliquam urna non diam aliquam eget hendrerit sem molestie.</p>
-          <p><strong>Lorem ipsum dolor sit amet</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</p>
+          <div class="img"><img src="images/Diseño sin título_20231217_144136_0000.png" width="179" height="215" alt="" class="fl" /></div>
+          <div class="post_content">
+            <p>Model Bolvia se ha convertido en una nueva forna de mostrar las novedades de la moda y las actividades comerciales <strong>En funcion al desarrollo de novedosas tecnicas de modelaje que se enmarcan en las aptiudes demostrativas y arte representativo que identifica a una Modelo Profesional</strong> Las representaciones que caracterizan a Model Bolivia hacen que todo el entorno se manifieste un ambiente de moda, belleza y performance las que durante mucho tiempo han sido preparadas, esto debido a que es representada por en equipo de fasinantes modelos que deben sus activiades a un entorno propicio donde se mantienen intactatas las expresiones de la moda, la belleza y el entusiasmo. Entonces hablamos de un mercado donde Bolivia Model se esta destacando haciendo que personas jovenes triunfen de manera satisfactoria cumpliendo con altos estandares y exigencias de clientes cuyo enfoque se ha puesto en prestar atencion a las nuevas alternativas que han surgido desde grandes y pequeños nidos de talentos humanos en el mundo del modelaje. </p>
+            <p>Este año ha sido y seguira siendo un salto al exito del mundo de la moda en nuestro medio, ya que iniciamos un ciclos de nuevas tendencias en performance, innovamos con nuevos enfoques que hacen que la juventud conosca hacerca de los avances del muevo diseño y belleza , situamos un gran servicio que hace que la gente disfrute de los medios donde exponemos nuestro arte demostrativo profesional. Adenas vamos de la mano de aquellos pilares fundamentales que hace que el modelaje sea una faceta prometedora para cada una de las personas que participan en los eventos a los que acudimos.</p>
+            <p><strong>El mundo es parte de la Belleza, cuidalo como si fueses tu misma!!!</strong></p>
+          </div>
+          <div class="clr"></div>
+          <p>Hoy en Model Bolivia se ha puesto en marcha nuevas tendencias que han sido y siguen siendo de interes de grandes personajes y de publicos en todo el mundo asi te invitamos a conocer un poco del entorno en cual se identifica nuestro trabajo. Mostrando nuevas tendencias y luchando contra todos aquellos obstaculos que son viejos estilos que han quedado al margen del trabajo que realizamos. Gracias por  confiar en nuestro trabajo, asi te mostramos paginas de referencia. </p>
+
           <ul class="sb_menu">
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
+            <li><a href="https://fashiongtonpost.com/es/guia-de-ropa-estadounidense/"><strong>Charlas de Moda</strong></a></li>
+            <li><a href="https://www.modaes.com/entorno/las-ventas-de-moda-en-estados-unidos-aceleran-en-abril-con-una-subida-del-27"><strong>Ventas Moda</strong></a></li>
+            <li><a href="https://www.hola.com/us-es/moda/"><strong>Hola Moda</strong></a></li>
+            <li><a href="https://www.eventbrite.es/b/united-states/fashion/"><strong>Eventos Moda</strong></a></li>
+            <li><a href="https://fastercapital.com/es/contenido/Tendencias-de-moda--Tendencias-de-moda-de-EE--UU---que-hay-de-moda-y-que-hay-de-fuera.html"><strong>Tendencias Moda</strong></a></li>
+            <li><a href="https://www.nferias.com/moda/estados-unidos/"><strong>Ferias Moda</strong></a></li>
           </ul>
         </div>
       </div>
@@ -66,69 +81,79 @@
         </div>
         <div class="clr"></div>
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2>
+          <h2 class="star"><span>Sitios de Referencia</span> Moda y mucho mas </h2>
           <div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Web Templates</a></li>
+            <li><a href="https://fashiongtonpost.com/es/guia-de-ropa-estadounidense/">Charlas de Moda</a></li>
+            <li><a href="https://www.modaes.com/entorno/las-ventas-de-moda-en-estados-unidos-aceleran-en-abril-con-una-subida-del-27">Ventas Moda</a></li>
+            <li><a href="https://www.hola.com/us-es/moda/">Hola Moda</a></li>
+            <li><a href="https://www.eventbrite.es/b/united-states/fashion/">Eventos Moda</a></li>
+            <li><a href="https://fastercapital.com/es/contenido/Tendencias-de-moda--Tendencias-de-moda-de-EE--UU---que-hay-de-moda-y-que-hay-de-fuera.html">Tendencias Moda</a></li>
+            <li><a href="https://www.nferias.com/moda/estados-unidos/">Ferias Moda</a></li>
           </ul>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2>
+          <h2 class="star"><span>Redes Sociales</span></h2>
           <div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="http://www.dreamtemplate.com/">DreamTemplate</a><br />
-              Over 6,000+ Premium Web Templates</li>
-            <li><a href="http://www.templatesold.com/">TemplateSOLD</a><br />
-              Premium WordPress &amp; Joomla Themes</li>
-            <li><a href="http://www.imhosted.com/">ImHosted.com</a><br />
-              Affordable Web Hosting Provider</li>
-            <li><a href="http://www.megastockphotos.com/">MegaStockPhotos</a><br />
-              Unlimited Amazing Stock Photos</li>
-            <li><a href="http://www.evrsoft.com/">Evrsoft</a><br />
-              Website Builder Software &amp; Tools</li>
-            <li><a href="http://www.csshub.com/">CSS Hub</a><br />
-              Premium CSS Templates</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61553201960102&mibextid=ZbWKwL">Model Bolivia Corp.</a><br />
+              Sitio con 100 000 visitas en este 2024</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61557039877457&mibextid=ZbWKwL">Performance Model Bolivia</a><br />
+              Servicios Comerciales para Eventos  &amp; Model Bolivia S.A.</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61556967969083&mibextid=ZbWKwL">Belleza Model Bolivia</a><br />
+              Actualmente nos encontramos formando un Staff de Belleza</li>
+            <li><a href="https://wa.me/59165641452">Whatsapp Productos y Servicios</a><br />
+              Obten el Brochure de Model Bolivia </li>
+            <li><a href="https://wa.link/3li9og">Whatsapp Oficina Santa Cruz </a><br />
+              Atencion al Cliente ayuda, informacion y consultas &amp; Model Bolivia S.A</li>
+            <li><a href="https://www.instagram.com/freddycopauyuni?igsh=MWEydDkza3NtMmduaA==">Instagram</a><br />
+              Compartimos alguna historias en Instagram </li>
           </ul>
         </div>
       </div>
       <div class="clr"></div>
+      <li><a href="contact.html"><span><strong>CONTACTO AQUI >>></strong></span></a></li>
+      <div>
+        <li><a href="https://forms.gle/DMNtvRJBhFgseJLQA"><span><strong>REGISTRATE COMO MODELO AQUI!!!  >>> </strong></span></a></li>
+        <div>
+          <li><a href="https://homebusinessservice.ecu.red"><span><strong>CATALOGO DE SERVICIOS Y PRODUCTOS!!!  >>> </strong></span></a></li>
+        </div>
+        <div>
+          <li><a href="https://calendly.com/cunegociotecnologia-/entrevista"><span><strong>PROGRAMA UNA REUNION!!!  >>> </strong></span></a></li>
+        </div>
+      </div>
     </div>
   </div>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
-        <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
+        <h2><span>Referencia</span> Actividades</h2>
+        <a href="#"><img src="images/0321-01_1711037522542.png" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Purple Lined Geometric Cargo Logistic Services Poster.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Shampoo Aclarador.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/0225-01_1708895153539.png" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Post de Facebook Creadora de Contenido Moderno Verde .jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/modelaje para eventos .jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
-        <h2><span>Services</span> Overview</h2>
-        <p>Curabitur sed urna id nunc pulvinar semper. Nunc sit amet tortor sit amet lacus sagittis posuere cursus vitae nunc.Etiam venenatis, turpis at eleifend porta, nisl nulla bibendum justo.</p>
+        <h2><span>Servicios</span> Model Bolivia SA</h2>
+        <p>Nuestros servicios  y productos, a traves del tiempo hemos y estamos usando diferentes diferentes estrategias que han llegado al mercado con buen impacto revolucionando el mundo de la moda y el modelaje, nos destacamos por brindarte una experiencia unica, gracias por visitarnos. </p>
         <ul class="fbg_ul">
-          <li><a href="#">Lorem ipsum dolor labore et dolore.</a></li>
-          <li><a href="#">Excepteur officia deserunt.</a></li>
-          <li><a href="#">Integer tellus ipsum tempor sed.</a></li>
+          <li><a href="#">Model Bolivia SA Srervicios Comerciales </a></li>
+          <li><a href="#">Model Bolivia SA Productos de Embellecimiento</a></li>
+          <li><a href="#">Model Bolivia SA System Mercantil Electronics </a></li>
         </ul>
       </div>
       <div class="col c3">
-        <h2><span>Contact</span> Us</h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui.</p>
-        <p class="contact_info"> <span>Address:</span> 1458 TemplateAccess, USA<br />
-          <span>Telephone:</span> +123-1234-5678<br />
-          <span>FAX:</span> +458-4578<br />
-          <span>Others:</span> +301 - 0125 - 01258<br />
-          <span>E-mail:</span> <a href="#">mail@yoursitename.com</a> </p>
+        <h2><span>Contactanos</span> Ahora!</h2>
+        <p>Ahora puedes contactarte con Model Bolivia y Solicitar los diferentes Servicios y Productos que ofrecemos a nuestros clientes con la calidez necesaria </p>
+        <p class="contact_info"> <span>Direccion:</span> Cuarto Anillo entre Radial 17 y medio, entre calle 11 y calle 9 callejon S/N Santa Cruz de la Sierra<br />
+          <span>Telefono:</span> +591 71629316<br />
+          <span>WhatsApp:</span> +591 65641452<br />
+          <span>WhatsApp2:</span> +591 61504656<br />
+          <span>E-mail:</span> <a href="#">copauyunifreddy@gmail.com</a> </p>
       </div>
       <div class="clr"></div>
     </div>
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">&copy; Copyright <a href="#">MyWebSite</a>.</p>
-      <p class="rf">Design by Dream <a href="http://www.dreamtemplate.com/">Web Templates</a></p>
+      <p class="lf">&copy; Copyright 2024 Todos los Derechos Reservados  <a href="#">Model Bolivia Administracion</a>.</p>
+      <p class="rf">Producido por Copa Uyuni Negocio & Tecnologia<a href="https://www.facebook.com/profile.php?id=61553201960102&mibextid=ZbWKwL"> Model Bolivia SA</a></p>
       <div style="clear:both;"></div>
     </div>
   </div>
