--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Model Bolivia SA | Administracion</title>
+<title>Model Bolivia SA</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -15,23 +15,23 @@
 <div class="main">
   <div class="header">
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-PG7LHT86JR');
-  </script>
+    gtag('config', 'G-PG7LHT86JR');
+    </script>
     <div class="header_resize">
       <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
-        <h1><a href="index.html"><span>Model Bollivia SA</span> <small>Agencia de Modelos</small></a></h1>
+        <h1><a href="index.html"><span>Model Bolivia SA</span> <small>Agencia de Modelos</small></a></h1>
       </div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html"><span>Principal</span></a></li>
-          <li class="active"><a href="support.html"><span>Administracion</span></a></li>
+          <li class="active"><a href="index.html"><span>Principal</span></a></li>
+          <li><a href="support.html"><span>Administracion</span></a></li>
           <li><a href="about.html"><span>Nosotros</span></a></li>
           <li><a href="blog.html"><span>Modelos</span></a></li>
           <li><a href="contact.html"><span>Contacto</span></a></li>
@@ -49,26 +49,30 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Model Bolivia SA </span> Agencia de Modelaje Profesional</h2>
+          <h2><span>Servicios de Modelaje Comercial,</span> Eventos Comerciales y Atencion al Cliente</h2>
+          <p class="infopost">ACTUALIDAD <span class="date">Gestion 2024</span> & <a href="#">Model Bolivia SA</a> &nbsp;&nbsp;|&nbsp;&nbsp;Servicios <a href="#">Publicidad</a>, <a href="#">Atencion al Cliente</a> <a href="#" class="com"><span>Informacion</span></a></p>
           <div class="clr"></div>
-          <div class="img"><img src="images/Diseño sin título_20231217_144136_0000.png" width="179" height="215" alt="" class="fl" /></div>
+          <div class="img"><img src="images/modelaje para eventos .jpg" width="179" height="215" alt="" class="fl" /></div>
           <div class="post_content">
-            <p>Model Bolvia se ha convertido en una nueva forna de mostrar las novedades de la moda y las actividades comerciales <strong>En funcion al desarrollo de novedosas tecnicas de modelaje que se enmarcan en las aptiudes demostrativas y arte representativo que identifica a una Modelo Profesional</strong> Las representaciones que caracterizan a Model Bolivia hacen que todo el entorno se manifieste un ambiente de moda, belleza y performance las que durante mucho tiempo han sido preparadas, esto debido a que es representada por en equipo de fasinantes modelos que deben sus activiades a un entorno propicio donde se mantienen intactatas las expresiones de la moda, la belleza y el entusiasmo. Entonces hablamos de un mercado donde Bolivia Model se esta destacando haciendo que personas jovenes triunfen de manera satisfactoria cumpliendo con altos estandares y exigencias de clientes cuyo enfoque se ha puesto en prestar atencion a las nuevas alternativas que han surgido desde grandes y pequeños nidos de talentos humanos en el mundo del modelaje. </p>
-            <p>Este año ha sido y seguira siendo un salto al exito del mundo de la moda en nuestro medio, ya que iniciamos un ciclos de nuevas tendencias en performance, innovamos con nuevos enfoques que hacen que la juventud conosca hacerca de los avances del muevo diseño y belleza , situamos un gran servicio que hace que la gente disfrute de los medios donde exponemos nuestro arte demostrativo profesional. Adenas vamos de la mano de aquellos pilares fundamentales que hace que el modelaje sea una faceta prometedora para cada una de las personas que participan en los eventos a los que acudimos.</p>
-            <p><strong>El mundo es parte de la Belleza, cuidalo como si fueses tu misma!!!</strong></p>
+            <p>Este Servicio esta diseñado para contar con un selecto staff de modelos que acompañan tus eventos comerciales, sociales, campañas, entretenimiento y otros varios. <a href="https://wa.me/59165641452"> Solicitar este servicio </a> Para aquellos eventos donde nesecitas elaborar una atencion al cliente personalizada, invitar a al publico en general a obtener informacion de tu negocio, realizar una promocion de tus servicios o productos, agendar citas de negocios o comenzar con una campaña, pues te ofrecemos atencion especializada para esos eventos importantes con el uso de diferentes metodos y estrategias deacuerdo al mercado o al publico requerido, haz de tus eventos comerciales un lugar que se convierta un punto importante para cada contacto. Se parte de un nucleo de intereses que reunen las cualidades de las nesecidades de cada persona.  </p>
+            <p><strong>Consigue toda  la informacion necesaria para obtener este servicio dentro de la Ciudad de Santa Cruz de la Sierra.</strong> Contamos con el enfoque  de demostraciones especialiazadas para cada ocacion, aseguramos el alcance del impacto comercial de cada evento, usamos dinamicas que son del interes de diversos estilos de publicos, el equipo y staff de modelos estan preparadas para abordar diferentes actividades de tal manera que el evento este vinculado al crecimiento y el desarrollo de tu negocio.</p>
+            <p class="spec"><a href="https://www.facebook.com/share/p/MU8uNPTnoTLjXHVm/?mibextid=ZbWKwL" class="rm">Mas Informacion &raquo;</a></p>
           </div>
           <div class="clr"></div>
-          <p>Hoy en Model Bolivia se ha puesto en marcha nuevas tendencias que han sido y siguen siendo de interes de grandes personajes y de publicos en todo el mundo asi te invitamos a conocer un poco del entorno en cual se identifica nuestro trabajo. Mostrando nuevas tendencias y luchando contra todos aquellos obstaculos que son viejos estilos que han quedado al margen del trabajo que realizamos. Gracias por  confiar en nuestro trabajo, asi te mostramos paginas de referencia. </p>
-
-          <ul class="sb_menu">
-            <li><a href="https://fashiongtonpost.com/es/guia-de-ropa-estadounidense/"><strong>Charlas de Moda</strong></a></li>
-            <li><a href="https://www.modaes.com/entorno/las-ventas-de-moda-en-estados-unidos-aceleran-en-abril-con-una-subida-del-27"><strong>Ventas Moda</strong></a></li>
-            <li><a href="https://www.hola.com/us-es/moda/"><strong>Hola Moda</strong></a></li>
-            <li><a href="https://www.eventbrite.es/b/united-states/fashion/"><strong>Eventos Moda</strong></a></li>
-            <li><a href="https://fastercapital.com/es/contenido/Tendencias-de-moda--Tendencias-de-moda-de-EE--UU---que-hay-de-moda-y-que-hay-de-fuera.html"><strong>Tendencias Moda</strong></a></li>
-            <li><a href="https://www.nferias.com/moda/estados-unidos/"><strong>Ferias Moda</strong></a></li>
-          </ul>
         </div>
+        <div class="article">
+          <h2><span>Servicios de Publicidad</span> y Marketing Comercial ROI Americano </h2>
+          <p class="infopost">ACTUALIDAD <span class="date">Gestion 2024</span> & <a href="#">Model Bolivia SA</a> &nbsp;&nbsp;|&nbsp;&nbsp;Servicios <a href="#">Publicidad</a>, <a href="#">Atencion al Cliente</a> <a href="#" class="com"><span>Informacion</span></a></p>
+          <div class="clr"></div>
+          <div class="img"><img src="images/Publicidad  Model Bolivia.jpg" width="179" height="215" alt="" class="fl" /></div>
+          <div class="post_content">
+            <p>Servicio de Publicidad Comercial, Social, Entretenimiento y Diferentes Actividades para tu negocio o eventos especiales <a href="https://wa.me/59165641452">Obenter mas informacion de este servicio </a> Ahora es el momento de llegar a convecer al publico de que forma tu negocio tiene lo que nesecitan los clientes, este la forma en que aseguran mucha parte del exito que tienen las mejores empresas a  nivel mundial y es que realiazar una publicidad o generar contenido se ha convertido la puerta del exito en el medio comercial. De forma sencilla haz que tu negocio tenga su propio contenido y comparte esas historias que contagian de entusiasmo a las personas </p>
+            <p><strong>Consigue toda  la informacion necesaria para obtener este servicio dentro de la Ciudad de Santa Cruz de la Sierra. </strong>Contamos con un selecto grupo humano que dejara la pantalla con la sintonia de todo el publico, Si es que nosotros estamos preparados para producir contenido que se identifica con diferentes estilos de publico que estan detras de la pantalla anciosos de ver un contenido que llene de emocion en esos momentos para compartir entre amigos, familia o disfrutar  de la  soledad. </p>
+            <p class="spec"><a href="https://www.facebook.com/share/p/v22rUPmb92RYfShe/?mibextid=ZbWKwL" class="rm">Mas Informacion &raquo;</a></p>
+          </div>
+          <div class="clr"></div>
+        </div>
+        <p class="pages"><small>Pag 1 de 2</small> <span>1</span> <a href="https://www.facebook.com/share/p/MU8uNPTnoTLjXHVm/?mibextid=ZbWKwL">2</a> <a href="https://www.facebook.com/share/p/v22rUPmb92RYfShe/?mibextid=ZbWKwL">&raquo;</a></p>
       </div>
       <div class="sidebar">
         <div class="searchform">
@@ -77,7 +81,7 @@
             <input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" />
             </span>
             <input name="button_search" src="images/search.gif" class="button_search" type="image" />
-          </form>
+          </form> 
         </div>
         <div class="clr"></div>
         <div class="gadget">
