--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Model Bolivia SA | Administracion</title>
+<title>Model Bolivia SA | Principal</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -15,24 +15,24 @@
 <div class="main">
   <div class="header">
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-PG7LHT86JR');
-  </script>
+    gtag('config', 'G-PG7LHT86JR');
+    </script>
     <div class="header_resize">
       <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
-        <h1><a href="index.html"><span>Model Bollivia SA</span> <small>Agencia de Modelos</small></a></h1>
+        <h1><a href="index.html"><span>Model Bolivia SA</span> <small>Agencia de Modelos</small></a></h1>
       </div>
       <div class="menu_nav">
         <ul>
           <li><a href="index.html"><span>Principal</span></a></li>
-          <li class="active"><a href="support.html"><span>Administracion</span></a></li>
-          <li><a href="about.html"><span>Nosotros</span></a></li>
+          <li><a href="support.html"><span>Administracion</span></a></li>
+          <li class="active"><a href="about.html"><span>Nosotros</span></a></li>
           <li><a href="blog.html"><span>Modelos</span></a></li>
           <li><a href="contact.html"><span>Contacto</span></a></li>
         </ul>
@@ -49,25 +49,35 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Model Bolivia SA </span> Agencia de Modelaje Profesional</h2>
+          <h2><span>Todo sobre las Actividades y Preparacion</span> Model Bolivia SA</h2>
           <div class="clr"></div>
-          <div class="img"><img src="images/Diseño sin título_20231217_144136_0000.png" width="179" height="215" alt="" class="fl" /></div>
-          <div class="post_content">
-            <p>Model Bolvia se ha convertido en una nueva forna de mostrar las novedades de la moda y las actividades comerciales <strong>En funcion al desarrollo de novedosas tecnicas de modelaje que se enmarcan en las aptiudes demostrativas y arte representativo que identifica a una Modelo Profesional</strong> Las representaciones que caracterizan a Model Bolivia hacen que todo el entorno se manifieste un ambiente de moda, belleza y performance las que durante mucho tiempo han sido preparadas, esto debido a que es representada por en equipo de fasinantes modelos que deben sus activiades a un entorno propicio donde se mantienen intactatas las expresiones de la moda, la belleza y el entusiasmo. Entonces hablamos de un mercado donde Bolivia Model se esta destacando haciendo que personas jovenes triunfen de manera satisfactoria cumpliendo con altos estandares y exigencias de clientes cuyo enfoque se ha puesto en prestar atencion a las nuevas alternativas que han surgido desde grandes y pequeños nidos de talentos humanos en el mundo del modelaje. </p>
-            <p>Este año ha sido y seguira siendo un salto al exito del mundo de la moda en nuestro medio, ya que iniciamos un ciclos de nuevas tendencias en performance, innovamos con nuevos enfoques que hacen que la juventud conosca hacerca de los avances del muevo diseño y belleza , situamos un gran servicio que hace que la gente disfrute de los medios donde exponemos nuestro arte demostrativo profesional. Adenas vamos de la mano de aquellos pilares fundamentales que hace que el modelaje sea una faceta prometedora para cada una de las personas que participan en los eventos a los que acudimos.</p>
-            <p><strong>El mundo es parte de la Belleza, cuidalo como si fueses tu misma!!!</strong></p>
+          <p><strong>Nos enfocamos en proporcionar a la juventud una preparacion en modelaje profesional que se adapta a sus nesecidades de acuerdo a su tiemmpo, de acuerdo a su talento, de cuerdo a su ritmo de  aprendizaje con metodos totalmente personalizados que se han creado para explotar el talento humano al maximo con dinamicas y ejercicios que resaltan las emociones, resaltan la amabilidad, resalta el espritu de vida, resalta el entusiasmo, resalta la inteligencia y que ademas dejan a la modelo desarrollando una vida profesional plena con la cual debe afrontar de forma madura, entonces es alli donde Bolivia Model le transmite el uso de herramientas competitivas con el objetivo de involucrarse con nueavos y mas mercados a los que ya acudimos como un medio de marketing y publicidad para el publico en general. Favoreciendo de esta manera la integridad del trabajo de cada una de las modelos porfesionales que se destacan en Model Bolivia. </strong></p>
+          <p>Podras alcanzar tus metas siempre y cuando estes preparada de forma adecuada. Es una de las muchas de las principales consignas que desatacan nuestros valores forjando espiritu Fortalecido, esto hace que cada una de las menciones obtenidas se deba a la constancia de todo un proceso comercial que se denomina ROI, metodo utilizado para descongestionar comercialmente etapas importantes en los negocios, generar cobertura de ventas por cada segmento, liberar el mercado con soluciones efecientes de tal manera que pudes obetener un contacto con el publico de forma dinamica, eficaz y efectiva. Estas Actividades son aquellas que van a vincular a Modelos de Model Bolivia con el interes de  tus proyectos ya seas un profesional, tengas un negocio, o estes haciendo una inversion, tambien si buscas una representatividad para el grupo o agrupacion social y de entretenimiento.   </p>
+        </div>
+        <div class="article">
+          <h2><span>Nuestra</span> Mision </h2>
+          <div class="clr"></div>
+          <p><strong>Nuestras intenciones son cambiar la rutina con una mejora en las capacidades de todas las modelos que son parte del Staff, quiere decir que abrimos un espacio en su trabajo donde le proponemos ubicar el desarrollo de habilidades sociales, comerciales, actividades, entretenimiento y servicios con alta eficasia, mejor profesionalismo y que involucaran mejores capacidades de disponibilidad en el desarrollo humano.</strong></p>
+          <p>Ademas tocamos tematicas sobre objetivos orientados a uso de metodos que se han ubicado en rutinas de personajes que son idenficativas de grandes pasarelas, en los medios de comunicacion, en grupos de entretenimiento publico, artistas de gran presencia cuya fianlidad es concentrar a la modelo en diferentes niveles de representacion que se identifica con tendencias en el dia a dia vivir de la poblacion, Esto significa que una Modelo de Model Bolivia es una persona cuyo valor humano se cuantifica como modelo social que ejecuta sus actividades con valores de respeto, igualdad y buenas relaciones humanas cuidando su estetica, resaltando su belleza y usando tecnicas avanzadas mostrando sus capacidades humanas, usando la etica y la moral que se adecua con las identidades de cada elemento al cual se va representar. </p>
+          <p>Hoy en dia las diferentes tendencias y estilos de Modelaje se han puesto alineadas a aquellas acividades cuya relacion entre las personas, grupos sociales y las culturas se estan prosesando dentro de circulos a los cuales se deben a objetivos del uso de medios tecnologicos, gubernamentales y sociales, donde Bolivia Model ha puesto su enfoque de tal manera que hagamos un paneo de todo aquello que es lo mas importante para un circulo en una red social, una red coorporativa, una red mercantil, una red comercial y otros varias redes, las cuales cumplen con prosesos a los que denominan organizacion, entonces nosotros hemos mantenido nuestra concentracion para ramificar todas aquellas actividades que tienen las orgsnizaciones de tal manera de compartir de forma masiva aquellos episodios que son rememorativos con el fin explotar las mejores cualidades que caractetizan a toda la gestion de la organizacion. Asi cumplimos con la  cobertura de etapas que son pilares fundamentales de vinculos con el publico en referencia a el aspecto, detalle, elegancia, etiqueta y otras que caracterizan al mundo del modelaje profesional  </p>
+          <div>
+            <div class="img"><img src="images/admin.jpg" width="100" height="100" alt="" class="fl" /></div>
+            <p><strong>Programa una Reunion con Model Bolvia SA</strong></p>
+            <p>Ingresa los datos requeridos en este cuadro: </p>
+            <div class="calendly-inline-widget" data-url="https://calendly.com/cunegociotecnologia-/entrevista" style="min-width:320px;height:700px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
           </div>
-          <div class="clr"></div>
-          <p>Hoy en Model Bolivia se ha puesto en marcha nuevas tendencias que han sido y siguen siendo de interes de grandes personajes y de publicos en todo el mundo asi te invitamos a conocer un poco del entorno en cual se identifica nuestro trabajo. Mostrando nuevas tendencias y luchando contra todos aquellos obstaculos que son viejos estilos que han quedado al margen del trabajo que realizamos. Gracias por  confiar en nuestro trabajo, asi te mostramos paginas de referencia. </p>
+          <div>
 
-          <ul class="sb_menu">
-            <li><a href="https://fashiongtonpost.com/es/guia-de-ropa-estadounidense/"><strong>Charlas de Moda</strong></a></li>
-            <li><a href="https://www.modaes.com/entorno/las-ventas-de-moda-en-estados-unidos-aceleran-en-abril-con-una-subida-del-27"><strong>Ventas Moda</strong></a></li>
-            <li><a href="https://www.hola.com/us-es/moda/"><strong>Hola Moda</strong></a></li>
-            <li><a href="https://www.eventbrite.es/b/united-states/fashion/"><strong>Eventos Moda</strong></a></li>
-            <li><a href="https://fastercapital.com/es/contenido/Tendencias-de-moda--Tendencias-de-moda-de-EE--UU---que-hay-de-moda-y-que-hay-de-fuera.html"><strong>Tendencias Moda</strong></a></li>
-            <li><a href="https://www.nferias.com/moda/estados-unidos/"><strong>Ferias Moda</strong></a></li>
-          </ul>
+
+
+          </div>
+        </div>
+        <div>
+
+        </div>
+        <div>
+          <p>Confirmaremos lo mas antes posible, Gracias </p>
         </div>
       </div>
       <div class="sidebar">
