--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ConsultingMX | Contact</title>
+<title>Model Bolivia SA | Contacto</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -14,17 +14,27 @@
 <body>
 <div class="main">
   <div class="header">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG7LHT86JR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PG7LHT86JR');
+    </script>
     <div class="header_resize">
+      <meta name="google-site-verification" content="yPRK277VYBwzHnIq4C2jTMKPIP1B0LnS3Npsf1-2IC0" />
       <div class="logo">
-        <h1><a href="index.html"><span>ConsultingMX</span> <small>Company Slogan Here</small></a></h1>
+        <h1><a href="index.html"><span>Model Boliva SA</span> <small>Agencia de Modelos</small></a></h1>
       </div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html"><span>Home Page</span></a></li>
-          <li><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li class="active"><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="index.html"><span>Principal</span></a></li>
+          <li><a href="support.html"><span>Administracion</span></a></li>
+          <li><a href="about.html"><span>Nosotros</span></a></li>
+          <li><a href="blog.html"><span>Modelos</span></a></li>
+          <li class="active"><a href="contact.html"><span>Contacto</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -39,37 +49,16 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Contact</span></h2>
+          <h2><span>Contactos </span></h2>
           <div class="clr"></div>
-          <p>Nullapede laorem velit curabitudin enim in nibh ero leo in pede. Semperpurus nibh elit et convallis eu trices congue males monterdum elit.</p>
+          <p>Contactanos y haznos llegar informacion de tu contacto. Esta es la oportunidad de conocer una mejor opcion en lo que refiere a Modelaje. Puedes tambien soliitar servicios o o pedir algun producto de tu preferecnia, no te olvides, Donde estes Moldel Bolivia SA.</p>
         </div>
         <div class="article">
-          <h2><span>Send us</span> mail</h2>
+          <h2><span>Contactos al </span> Correo Electronico o envia tus datos </h2>
           <div class="clr"></div>
-          <form action="#" method="post" id="sendemail">
-            <ol>
-              <li>
-                <label for="name">Name (required)</label>
-                <input id="name" name="name" class="text" />
-              </li>
-              <li>
-                <label for="email">Email Address (required)</label>
-                <input id="email" name="email" class="text" />
-              </li>
-              <li>
-                <label for="website">Website</label>
-                <input id="website" name="website" class="text" />
-              </li>
-              <li>
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="8" cols="50"></textarea>
-              </li>
-              <li>
-                <input type="image" name="imageField" id="imageField" src="images/submit.gif" class="send" />
-                <div class="clr"></div>
-              </li>
-            </ol>
-          </form>
+          <div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGo8JJxeJGjVRE8tDHwR4sdCEMaBZx0iDnJSs3RdFFeNvBdQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          </div>
         </div>
       </div>
       <div class="sidebar">
@@ -83,69 +72,79 @@
         </div>
         <div class="clr"></div>
         <div class="gadget">
-          <h2 class="star"><span>Sidebar</span> Menu</h2>
+          <h2 class="star"><span>Sitios de Referencia</span> Moda y mucho mas </h2>
           <div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Web Templates</a></li>
+            <li><a href="https://fashiongtonpost.com/es/guia-de-ropa-estadounidense/">Charlas de Moda</a></li>
+            <li><a href="https://www.modaes.com/entorno/las-ventas-de-moda-en-estados-unidos-aceleran-en-abril-con-una-subida-del-27">Ventas Moda</a></li>
+            <li><a href="https://www.hola.com/us-es/moda/">Hola Moda</a></li>
+            <li><a href="https://www.eventbrite.es/b/united-states/fashion/">Eventos Moda</a></li>
+            <li><a href="https://fastercapital.com/es/contenido/Tendencias-de-moda--Tendencias-de-moda-de-EE--UU---que-hay-de-moda-y-que-hay-de-fuera.html">Tendencias Moda</a></li>
+            <li><a href="https://www.nferias.com/moda/estados-unidos/">Ferias Moda</a></li>
           </ul>
         </div>
         <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2>
+          <h2 class="star"><span>Redes Sociales</span></h2>
           <div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="http://www.dreamtemplate.com/">DreamTemplate</a><br />
-              Over 6,000+ Premium Web Templates</li>
-            <li><a href="http://www.templatesold.com/">TemplateSOLD</a><br />
-              Premium WordPress &amp; Joomla Themes</li>
-            <li><a href="http://www.imhosted.com/">ImHosted.com</a><br />
-              Affordable Web Hosting Provider</li>
-            <li><a href="http://www.megastockphotos.com/">MegaStockPhotos</a><br />
-              Unlimited Amazing Stock Photos</li>
-            <li><a href="http://www.evrsoft.com/">Evrsoft</a><br />
-              Website Builder Software &amp; Tools</li>
-            <li><a href="http://www.csshub.com/">CSS Hub</a><br />
-              Premium CSS Templates</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61553201960102&mibextid=ZbWKwL">Model Bolivia Corp.</a><br />
+              Sitio con 100 000 visitas en este 2024</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61557039877457&mibextid=ZbWKwL">Performance Model Bolivia</a><br />
+              Servicios Comerciales para Eventos  &amp; Model Bolivia S.A.</li>
+            <li><a href="https://www.facebook.com/profile.php?id=61556967969083&mibextid=ZbWKwL">Belleza Model Bolivia</a><br />
+              Actualmente nos encontramos formando un Staff de Belleza</li>
+            <li><a href="https://wa.me/59165641452">Whatsapp Productos y Servicios</a><br />
+              Obten el Brochure de Model Bolivia </li>
+            <li><a href="https://wa.link/3li9og">Whatsapp Oficina Santa Cruz </a><br />
+              Atencion al Cliente ayuda, informacion y consultas &amp; Model Bolivia S.A</li>
+            <li><a href="https://www.instagram.com/freddycopauyuni?igsh=MWEydDkza3NtMmduaA==">Instagram</a><br />
+              Compartimos alguna historias en Instagram </li>
           </ul>
         </div>
       </div>
       <div class="clr"></div>
+      <li><a href="contact.html"><span><strong>CONTACTO AQUI >>></strong></span></a></li>
+      <div>
+        <li><a href="https://forms.gle/DMNtvRJBhFgseJLQA"><span><strong>REGISTRATE COMO MODELO AQUI!!!  >>> </strong></span></a></li>
+        <div>
+          <li><a href="https://homebusinessservice.ecu.red"><span><strong>CATALOGO DE SERVICIOS Y PRODUCTOS!!!  >>> </strong></span></a></li>
+        </div>
+        <div>
+          <li><a href="https://calendly.com/cunegociotecnologia-/entrevista"><span><strong>PROGRAMA UNA REUNION!!!  >>> </strong></span></a></li>
+        </div>
+      </div>
     </div>
   </div>
   <div class="fbg">
     <div class="fbg_resize">
       <div class="col c1">
-        <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
+        <h2><span>Referencia</span> Actividades</h2>
+        <a href="#"><img src="images/0321-01_1711037522542.png" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Purple Lined Geometric Cargo Logistic Services Poster.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Shampoo Aclarador.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/0225-01_1708895153539.png" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/Post de Facebook Creadora de Contenido Moderno Verde .jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/modelaje para eventos .jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
-        <h2><span>Services</span> Overview</h2>
-        <p>Curabitur sed urna id nunc pulvinar semper. Nunc sit amet tortor sit amet lacus sagittis posuere cursus vitae nunc.Etiam venenatis, turpis at eleifend porta, nisl nulla bibendum justo.</p>
+        <h2><span>Servicios</span> Model Bolivia SA</h2>
+        <p>Nuestros servicios  y productos, a traves del tiempo hemos y estamos usando diferentes diferentes estrategias que han llegado al mercado con buen impacto revolucionando el mundo de la moda y el modelaje, nos destacamos por brindarte una experiencia unica, gracias por visitarnos. </p>
         <ul class="fbg_ul">
-          <li><a href="#">Lorem ipsum dolor labore et dolore.</a></li>
-          <li><a href="#">Excepteur officia deserunt.</a></li>
-          <li><a href="#">Integer tellus ipsum tempor sed.</a></li>
+          <li><a href="#">Model Bolivia SA Srervicios Comerciales </a></li>
+          <li><a href="#">Model Bolivia SA Productos de Embellecimiento</a></li>
+          <li><a href="#">Model Bolivia SA System Mercantil Electronics </a></li>
         </ul>
       </div>
       <div class="col c3">
-        <h2><span>Contact</span> Us</h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui.</p>
-        <p class="contact_info"> <span>Address:</span> 1458 TemplateAccess, USA<br />
-          <span>Telephone:</span> +123-1234-5678<br />
-          <span>FAX:</span> +458-4578<br />
-          <span>Others:</span> +301 - 0125 - 01258<br />
-          <span>E-mail:</span> <a href="#">mail@yoursitename.com</a> </p>
+        <h2><span>Contactanos</span> Ahora!</h2>
+        <p>Ahora puedes contactarte con Model Bolivia y Solicitar los diferentes Servicios y Productos que ofrecemos a nuestros clientes con la calidez necesaria </p>
+        <p class="contact_info"> <span>Direccion:</span> Cuarto Anillo entre Radial 17 y medio, entre calle 11 y calle 9 callejon S/N Santa Cruz de la Sierra<br />
+          <span>Telefono:</span> +591 71629316<br />
+          <span>WhatsApp:</span> +591 65641452<br />
+          <span>WhatsApp2:</span> +591 61504656<br />
+          <span>E-mail:</span> <a href="#">copauyunifreddy@gmail.com</a> </p>
       </div>
       <div class="clr"></div>
     </div>
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">&copy; Copyright <a href="#">MyWebSite</a>.</p>
-      <p class="rf">Design by Dream <a href="http://www.dreamtemplate.com/">Web Templates</a></p>
+      <p class="lf">&copy; Copyright 2024 Todos los Derechos Reservados  <a href="#">Model Bolivia Administracion</a>.</p>
+      <p class="rf">Producido por Copa Uyuni Negocio & Tecnologia<a href="https://www.facebook.com/profile.php?id=61553201960102&mibextid=ZbWKwL"> Model Bolivia SA</a></p>
       <div style="clear:both;"></div>
     </div>
   </div>
